// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Ignored file  1`] = `
{
  "stderr": "",
  "stdout": "",
  "write": [],
}
`;

exports[`None exist file  1`] = `
{
  "stderr": "[error] No files matching the pattern were found: "non-exist-file".",
  "stdout": "",
  "write": [],
}
`;

exports[`Not matching pattern  1`] = `
{
  "stderr": "[error] No files matching the pattern were found: "*.non-exist-pattern".",
  "stdout": "",
  "write": [],
}
`;

exports[`ignore-unknown alias  1`] = `
{
  "stdout": "javascript.js
override.as-js-file",
}
`;

exports[`ignore-unknown check  1`] = `
{
  "stderr": "[warn] javascript.js
[warn] override.as-js-file
[warn] Code style issues found in 2 files. Run Prettier with --write to fix.",
  "stdout": "Checking formatting...",
  "write": [],
}
`;

exports[`ignore-unknown dir  1`] = `
{
  "stdout": "javascript.js
override.as-js-file",
}
`;

exports[`ignore-unknown pattern  1`] = `
{
  "stdout": "javascript.js
override.as-js-file",
}
`;

exports[`ignore-unknown write  1`] = `
{
  "stdout": "javascript.js
override.as-js-file",
  "write": [
    {
      "content": "const foo = "bar";
",
      "filename": "javascript.js",
    },
    {
      "content": "const foo = "bar";
",
      "filename": "override.as-js-file",
    },
  ],
}
`;
